--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TASK-MANAGEMENT</title>
 </head>
-<body>
+<body onload="reloadTaskCard()">
 
     <div class="modal fade" id="newcardmodal" tabindex="-1" aria-labelledby="newcardModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -68,10 +68,7 @@
     </nav>
     <main class="container">
        <section>
-           <div  id="taskContents" class="row">
-               
-               
-           </div>
+           <div  id="taskContents" class="row"> </div>
        </section>
     </main>
     <script src="index.js"></script>
