--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <input type="text" class="form-control" id="taskTitle"/>
                     </div>
                     <div class="mb-3">
-                        <label for="taskType" class="form-label">TASK TYPE</label>
+                        <label for="taskType" class="form-label">TASK TYP0</label>
                         <input type="text" class="form-control" id="taskType"/>
                     </div>
                     <div class="mb-3">
