--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <input type="url" class="form-control" id="imageURL"/>
                     </div>
                     <div class="mb-3">
-                        <label for="taskTitle" class="form-label">TASK TITLO</label>
+                        <label for="taskTitle" class="form-label">FLASK TITLO</label>
                         <input type="text" class="form-control" id="taskTitle"/>
                     </div>
                     <div class="mb-3">
